--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     />
     <meta
       name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="Play and chat smarter with GPT4Free"
     />
-    <meta name="twitter:title" content="Better ChatGPT" />
+    <meta name="twitter:title" content="GPT4Free" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
+    <title>GPT4Free</title>
   </head>
   <body>
     <div id="root"></div>
