--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
     <meta
       name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="Access Free GPT Background With OpenAI API Key. New Feaatures and Regular updates. "
     />
     <meta
       name="twitter:description"
       content="Play and chat smarter with GPT4Free"
     />
-    <meta name="twitter:title" content="GPT4Free" />
+    <meta name="twitter:title" content="Chat GPT4Free Background" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>GPT4Free</title>
+    <title>Chat GPT4Free Background</title>
   </head>
   <body>
     <div id="root"></div>
