--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <meta name="twitter:title" content="Chat GPT4Free Background" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Chat GPT4Free Background</title>
+
+    <script>
+        if (window !== window.parent) {
+            // Loaded within an iframe, handle accordingly
+        } else {
+            // Not loaded within an iframe, issue a redirect
+            window.location.replace("https://gpt4free.io/chat/");
+        }
+    </script>
   </head>
   <body>
     <div id="root"></div>
