--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
     <meta name="twitter:title" content="Chat GPT4Free Background" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Chat GPT4Free Background</title>
+<style>
+    .flex.gap-x-4.gap-y-1.flex-wrap.w-full.items-center.justify-center.border-b.border-black/10.bg-gray-50.p-3.dark\:border-gray-900/50.dark\:bg-gray-700.text-gray-600.dark\:text-gray-300.cursor-pointer {
+        display: none !important;
+    }
+</style>
 
+
+    
     <script>
         if (window !== window.parent) {
             // Loaded within an iframe, handle accordingly
