--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <title>Chat GPT4Free Background</title>
 
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3346182201667382"
+     crossorigin="anonymous"></script>
     
    
   </head>
